deploy/logs/payout.log
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/payout_daemon.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/payout_daemon.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
